nearby-proximity typo

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
       <section class="nearby section">
         <img
           alt="Food proximity radius diagram. One block: Halal Food Truck NW Corner of 38th and Walnut, Mexi-Cali Burrito Truck SW Corner of 38th and Walnut. Two blocks: Sweetgreen 3925 Walnut, Jimmy John's 3925 Walnut, Bobby's Burger Palace 3925 Walnut, Chipotle 3925 Walnut, Hummus Grill 3931 Walnut."
-          class="nearby-promixmity"
+          class="nearby-proximity"
           src="images/barcampphilly-2023-lunch-options-2.svg"
         />
       </section>
