updated sponsor images with transparent png

--- a/index.html
+++ b/index.html
@@ -545,10 +545,19 @@
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">Solo Sponsors</h3>
           <a href="https://chariotsolutions.com" target="_blank">
-            Chariot Solutions
+            <img 
+              src="/images/sponsors/chariot-solutions-100.png"
+              class="responsive"
+              alt="Chariot Solutions"
+            />
           </a>
-          |
-          <a href="https://arcwebtech.com" target="_blank"> Arcweb </a>
+          <a href="https://arcwebtech.com" target="_blank">
+            <img
+              src="images/sponsors/arcweb-100.png"
+              class="responsive"
+              alt="Arcweb"
+            />
+          </a>
         </div>
       </section>
 
