--- a/index.html
+++ b/index.html
@@ -702,6 +702,97 @@
                 >
               </div>
             </li>
+
+            <li class="organizer">
+              <img
+                alt="Photo of Dawn Wages"
+                class="organizer-photo"
+                src="https://placehold.it/250x250"
+              />
+              <div class="organizer-details">
+                <div class="organizer-name">Dawn Wages</div>
+                <a
+                  class="organizer-social"
+                  href=""
+                  target="_blank"
+                  rel="noopener nofollow"
+                  >@handle</a
+                >
+              </div>
+            </li>
+
+            <li class="organizer">
+              <img
+                alt="Photo of Joe Campbell"
+                class="organizer-photo"
+                src="https://placehold.it/250x250"
+              />
+              <div class="organizer-details">
+                <div class="organizer-name">Joe Campbell</div>
+                <a
+                  class="organizer-social"
+                  href=""
+                  target="_blank"
+                  rel="noopener nofollow"
+                  >@handle</a
+                >
+              </div>
+            </li>
+
+            <li class="organizer">
+              <img
+                alt="Photo of James M."
+                class="organizer-photo"
+                src="https://placehold.it/250x250"
+              />
+              <div class="organizer-details">
+                <div class="organizer-name">James M.</div>
+                <a
+                  class="organizer-social"
+                  href=""
+                  target="_blank"
+                  rel="noopener nofollow"
+                  >@handle</a
+                >
+              </div>
+            </li>
+
+            <li class="organizer">
+              <img
+                alt="Photo of JM Conway"
+                class="organizer-photo"
+                src="https://placehold.it/250x250"
+              />
+              <div class="organizer-details">
+                <div class="organizer-name">JM Conway</div>
+                <a
+                  class="organizer-social"
+                  href=""
+                  target="_blank"
+                  rel="noopener nofollow"
+                  >@handle</a
+                >
+              </div>
+            </li>
+
+            <li class="organizer">
+              <img
+                alt="Photo of Antonio"
+                class="organizer-photo"
+                src="https://placehold.it/250x250"
+              />
+              <div class="organizer-details">
+                <div class="organizer-name">Antonio</div>
+                <a
+                  class="organizer-social"
+                  href=""
+                  target="_blank"
+                  rel="noopener nofollow"
+                  >@handle</a
+                >
+              </div>
+            </li>
+
           </ul>
         </div>
       </section>
