feat: used two icons per organizer for socials, and standardized footer images

--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">Solo Sponsors</h3>
           <a href="https://chariotsolutions.com" target="_blank">
-            <img 
+            <img
               src="/images/sponsors/chariot-solutions-100.png"
               class="responsive"
               alt="Chariot Solutions"
@@ -600,35 +600,34 @@
               <img
                 alt="Photo of Tim Allen"
                 class="organizer-photo"
-                src="https://ca.slack-edge.com/T03EC6Y4U-U0NG2H5CZ-b5e1e92fe667-512"
+                src="images/organizers/tim-allen.jpg"
               />
               <div class="organizer-details">
                 <div class="organizer-name">Tim Allen</div>
                 <a
                   class="organizer-social"
+                  href="https://pyphilly.org"
+                  target="_blank"
+                  rel="noopener nofollow"
+                >
+                  <img
+                    aria-label="Globe icon"
+                    class="organizer-social-icon"
+                    src="images/icons/globe.svg"
+                  />
+                </a>
+                <a
+                  class="organizer-social"
                   href="https://twitter.com/FlipperPA"
                   target="_blank"
                   rel="noopener nofollow"
-                  >@flipperpa</a
                 >
-              </div>
-            </li>
-
-            <li class="organizer">
-              <img
-                alt="Photo of Josh Goldberg"
-                class="organizer-photo"
-                src="https://www.joshuakgoldberg.com/images/speaking-dark.webp"
-              />
-              <div class="organizer-details">
-                <div class="organizer-name">Josh Goldberg</div>
-                <a
-                  class="organizer-social"
-                  href="https://twitter.com/JoshuaKGoldberg"
-                  target="_blank"
-                  rel="noopener nofollow"
-                  >@JoshuaKGoldberg</a
-                >
+                  <img
+                    aria-label="Twitter icon"
+                    class="organizer-social-icon"
+                    src="images/icons/twitter.svg"
+                  />
+                </a>
               </div>
             </li>
 
@@ -636,17 +635,69 @@
               <img
                 alt="Photo of Samira Gibson"
                 class="organizer-photo"
-                src="https://media.licdn.com/dms/image/D4E03AQHBkdNmWy_Ang/profile-displayphoto-shrink_800_800/0/1691089615869?e=1699488000&v=beta&t=W4BIT6rTrJ035Hu3cByn3Q6BFro93DaH3epxm0RmAMU"
+                src="images/organizers/samira-gibson.jpg"
               />
               <div class="organizer-details">
                 <div class="organizer-name">Samira Gibson</div>
                 <a
                   class="organizer-social"
-                  href=""
+                  href="https://samiragibson.net"
                   target="_blank"
                   rel="noopener nofollow"
-                  >@kydkennedy</a
                 >
+                  <img
+                    aria-label="Globe icon"
+                    class="organizer-social-icon"
+                    src="images/icons/globe.svg"
+                  />
+                </a>
+                <a
+                  class="organizer-social"
+                  href="https://instagram.com/kydkennedy"
+                  target="_blank"
+                  rel="noopener nofollow"
+                >
+                  <img
+                    aria-label="Instagram icon"
+                    class="organizer-social-icon"
+                    src="images/icons/instagram.svg"
+                  />
+                </a>
+              </div>
+            </li>
+
+            <li class="organizer">
+              <img
+                alt="Photo of Josh Goldberg"
+                class="organizer-photo"
+                src="images/organizers/josh-goldberg.jpg"
+              />
+              <div class="organizer-details">
+                <div class="organizer-name">Josh Goldberg</div>
+                <a
+                  class="organizer-social"
+                  href="https://joshuakgoldberg.com"
+                  target="_blank"
+                  rel="noopener nofollow"
+                >
+                  <img
+                    aria-label="Globe icon"
+                    class="organizer-social-icon"
+                    src="images/icons/globe.svg"
+                  />
+                </a>
+                <a
+                  class="organizer-social"
+                  href="https://twitter.com/JoshuaKGoldberg"
+                  target="_blank"
+                  rel="noopener nofollow"
+                >
+                  <img
+                    aria-label="Twitter icon"
+                    class="organizer-social-icon"
+                    src="images/icons/twitter.svg"
+                  />
+                </a>
               </div>
             </li>
 
@@ -659,11 +710,29 @@
               <div class="organizer-details">
                 <div class="organizer-name">Dane Hillard</div>
                 <a
+                  class="organizer-social"
+                  href="https://dane.engineering/"
+                  target="_blank"
+                  rel="noopener nofollow"
+                >
+                  <img
+                    aria-label="Globe icon"
+                    class="organizer-social-icon"
+                    src="images/icons/globe.svg"
+                  />
+                </a>
+                <a
+                  class="organizer-social"
                   href="https://twitter.com/easyaspython"
                   target="_blank"
                   rel="noopener nofollow"
-                  >@easyaspython</a
                 >
+                  <img
+                    aria-label="Twitter icon"
+                    class="organizer-social-icon"
+                    src="images/icons/twitter.svg"
+                  />
+                </a>
               </div>
             </li>
 
@@ -671,17 +740,34 @@
               <img
                 alt="Photo of Jessica Victor"
                 class="organizer-photo"
-                src="https://images.squarespace-cdn.com/content/v1/5a75eafe6957da992cae5ab7/1521323119571-EG0ITWO64382S1EKOY62/14-Jessica-Victor-Small.jpg?format=2500w"
+                src="images/organizers/jessica-victor.jpg"
               />
               <div class="organizer-details">
                 <div class="organizer-name">Jessica Victor</div>
                 <a
                   class="organizer-social"
-                  href="https://www.jessicavictor.com/"
+                  href="https://www.jessicavictor.com"
                   target="_blank"
                   rel="noopener nofollow"
-                  >@handle</a
                 >
+                  <img
+                    aria-label="Globe icon"
+                    class="organizer-social-icon"
+                    src="images/icons/globe.svg"
+                  />
+                </a>
+                <a
+                  class="organizer-social"
+                  href="https://www.instagram.com/jvictorious_"
+                  target="_blank"
+                  rel="noopener nofollow"
+                >
+                  <img
+                    aria-label="Instagram icon"
+                    class="organizer-social-icon"
+                    src="images/icons/instagram.svg"
+                  />
+                </a>
               </div>
             </li>
 
@@ -689,17 +775,34 @@
               <img
                 alt="Photo of Harper Yatvin"
                 class="organizer-photo"
-                src="https://placehold.it/250x250"
+                src="images/organizers/harper-yatvin.jpg"
               />
               <div class="organizer-details">
                 <div class="organizer-name">Harper Yatvin</div>
                 <a
                   class="organizer-social"
-                  href=""
+                  href="https://www.instagram.com/harperyatvin"
                   target="_blank"
                   rel="noopener nofollow"
-                  >@handle</a
                 >
+                  <img
+                    aria-label="Instagram icon"
+                    class="organizer-social-icon"
+                    src="images/icons/instagram.svg"
+                  />
+                </a>
+                <a
+                  class="organizer-social"
+                  href="https://www.twitter.com/hyatvin"
+                  target="_blank"
+                  rel="noopener nofollow"
+                >
+                  <img
+                    aria-label="Twitter icon"
+                    class="organizer-social-icon"
+                    src="images/icons/twitter.svg"
+                  />
+                </a>
               </div>
             </li>
           </ul>
