fix: remove apple and banana hashtags too

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </a>
             <a
               class="button share-link"
-              href="https://twitter.com/intent/tweet?url=http%3A%2F%2F2023.barcampphilly.org&hashtags=apple%2Cbanana"
+              href="https://twitter.com/intent/tweet?url=http%3A%2F%2F2023.barcampphilly.org"
               rel="noopener nofollow"
               target="_blank"
             >
