Add organizer info and images.

--- a/index.html
+++ b/index.html
@@ -544,20 +544,9 @@
 
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">Solo Sponsors</h3>
-          <a href="https://chariotsolutions.com" target="_blank">
-            <img
-              src="/images/sponsors/chariot-solutions-100.png"
-              class="responsive"
-              alt="Chariot Solutions"
-            />
-          </a>
-          <a href="https://arcwebtech.com" target="_blank">
-            <img
-              src="images/sponsors/arcweb-100.png"
-              class="responsive"
-              alt="Arcweb"
-            />
-          </a>
+          <a href="https://arcwebtech.com" target="_blank">Arcweb</a>
+          |
+          <a href="https://chariotsolutions.com" target="_blank">Chariot Solutions</a>
         </div>
       </section>
 
@@ -628,6 +617,28 @@
                     src="images/icons/twitter.svg"
                   />
                 </a>
+              </div>
+            </li>
+
+            <li class="organizer">
+              <img
+                alt="Photo of Joe Campbell"
+                class="organizer-photo"
+                src="images/organizers/joe-campbell.jpg"
+              />
+              <div class="organizer-details">
+                <div class="organizer-name">Joe Campbell</div>
+              </div>
+            </li>
+
+            <li class="organizer">
+              <img
+                alt="Photo of JM Conway"
+                class="organizer-photo"
+                src="images/organizers/jm-conway.jpg"
+              />
+              <div class="organizer-details">
+                <div class="organizer-name">JM Conway</div>
               </div>
             </li>
 
@@ -738,6 +749,17 @@
 
             <li class="organizer">
               <img
+                alt="Photo of James Mason"
+                class="organizer-photo"
+                src="images/organizers/james-mason.jpg"
+              />
+              <div class="organizer-details">
+                <div class="organizer-name">James Mason</div>
+              </div>
+            </li>
+
+            <li class="organizer">
+              <img
                 alt="Photo of Jessica Victor"
                 class="organizer-photo"
                 src="images/organizers/jessica-victor.jpg"
@@ -766,6 +788,52 @@
                     aria-label="Instagram icon"
                     class="organizer-social-icon"
                     src="images/icons/instagram.svg"
+                  />
+                </a>
+              </div>
+            </li>
+
+            <li class="organizer">
+              <img
+                alt="Photo of Antonio Vivas"
+                class="organizer-photo"
+                src="images/organizers/antonio-vivas.png"
+              />
+              <div class="organizer-details">
+                <div class="organizer-name">Antonio Vivas</div>
+              </div>
+            </li>
+
+            <li class="organizer">
+              <img
+                alt="Photo of Dawn Wages"
+                class="organizer-photo"
+                src="images/organizers/dawn-wages.jpg"
+              />
+              <div class="organizer-details">
+                <div class="organizer-name">Dawn Wages</div>
+                <a
+                  class="organizer-social"
+                  href="http://dawnwages.info"
+                  target="_blank"
+                  rel="noopener nofollow"
+                >
+                  <img
+                    aria-label="Globe icon"
+                    class="organizer-social-icon"
+                    src="images/icons/globe.svg"
+                  />
+                </a>
+                <a
+                  class="organizer-social"
+                  href="https://twitter.com/DawnWagesSays"
+                  target="_blank"
+                  rel="noopener nofollow"
+                >
+                  <img
+                    aria-label="Twitter icon"
+                    class="organizer-social-icon"
+                    src="images/icons/twitter.svg"
                   />
                 </a>
               </div>
@@ -803,96 +871,6 @@
                     src="images/icons/twitter.svg"
                   />
                 </a>
-              </div>
-            </li>
-
-            <li class="organizer">
-              <img
-                alt="Photo of Dawn Wages"
-                class="organizer-photo"
-                src="https://placehold.it/250x250"
-              />
-              <div class="organizer-details">
-                <div class="organizer-name">Dawn Wages</div>
-                <a
-                  class="organizer-social"
-                  href=""
-                  target="_blank"
-                  rel="noopener nofollow"
-                  >@handle</a
-                >
-              </div>
-            </li>
-
-            <li class="organizer">
-              <img
-                alt="Photo of Joe Campbell"
-                class="organizer-photo"
-                src="https://placehold.it/250x250"
-              />
-              <div class="organizer-details">
-                <div class="organizer-name">Joe Campbell</div>
-                <a
-                  class="organizer-social"
-                  href=""
-                  target="_blank"
-                  rel="noopener nofollow"
-                  >@handle</a
-                >
-              </div>
-            </li>
-
-            <li class="organizer">
-              <img
-                alt="Photo of James M."
-                class="organizer-photo"
-                src="https://placehold.it/250x250"
-              />
-              <div class="organizer-details">
-                <div class="organizer-name">James M.</div>
-                <a
-                  class="organizer-social"
-                  href=""
-                  target="_blank"
-                  rel="noopener nofollow"
-                  >@handle</a
-                >
-              </div>
-            </li>
-
-            <li class="organizer">
-              <img
-                alt="Photo of JM Conway"
-                class="organizer-photo"
-                src="https://placehold.it/250x250"
-              />
-              <div class="organizer-details">
-                <div class="organizer-name">JM Conway</div>
-                <a
-                  class="organizer-social"
-                  href=""
-                  target="_blank"
-                  rel="noopener nofollow"
-                  >@handle</a
-                >
-              </div>
-            </li>
-
-            <li class="organizer">
-              <img
-                alt="Photo of Antonio"
-                class="organizer-photo"
-                src="https://placehold.it/250x250"
-              />
-              <div class="organizer-details">
-                <div class="organizer-name">Antonio</div>
-                <a
-                  class="organizer-social"
-                  href=""
-                  target="_blank"
-                  rel="noopener nofollow"
-                  >@handle</a
-                >
               </div>
             </li>
 
