Update Twitter link.

--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
 
         <li>
           <a
-            href="https://twitter.com/i/flow/login?redirect_after_login=%2Fbarcampphilly"
+            href="https://twitter.com/barcampphilly"
             target="_blank"
             rel="noopener nofollow"
           >
