10 rooms instead of 11.

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
         <div class="section-contents section-contents--about">
           <h2 class="heading-primary">What is a BarCamp?</h2>
           <p class="text-body text-body--medium">
-            BarCamp is an “unconference“ – a full day of up to 66 sessions, over
-            6 timeslots, in 11 rooms at Wharton's Huntsman Hall where attendees
+            BarCamp is an “unconference“ – a full day of 60 unique sessions, over
+            6 timeslots, in 10 rooms at Wharton's Huntsman Hall where attendees
             build the schedule the morning of the event. Sessions are given on a
             variety of topics, and the day is created collaboratively – built by
             the people, for the people.
