Make times consistent with text.

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           </p>
           <h3 class="heading-secondary">What kind of talks?</h3>
           <p class="text-body text-body--medium">
-            Topics vary from the technical (“Wordpress Child Themes”) to the
+            Topics vary from the technical (“WordPress Child Themes”) to the
             inspiring (“Running: Not Just for the Zombie Apocalypse”). From
             practiced talks (“Designing for People”) to open discussions (“Nerds
             w/ Kids Roundtable”). Also, if you don't like the talk you're in,
@@ -306,7 +306,7 @@
           <ol class="schedule">
             <li class="schedule-item">
               <h4 class="heading-tertiary heading-tertiary--schedule-item">
-                <div class="schedule-window">8:00am - 9:45am</div>
+                <div class="schedule-window">8:00am - 10:00am</div>
                 <div class="schedule-heading">
                   Registration and session building
                 </div>
@@ -322,7 +322,7 @@
             </li>
             <li class="schedule-item">
               <h4 class="heading-tertiary heading-tertiary--schedule-item">
-                <div class="schedule-window">9:45am - 10:00am</div>
+                <div class="schedule-window">10:00am - 10:15am</div>
                 <div class="schedule-heading">Opening Remarks</div>
               </h4>
               <p class="schedule-details">
