Update parking and sustenance.

--- a/index.html
+++ b/index.html
@@ -234,24 +234,25 @@
               <img alt="" class="trifold-icon" src="images/parking.svg" />
               <h3 class="heading-secondary">Parking</h3>
               <p class="text-body text-body--small">
-                For anyone riding a train or regional rail to 30th Street
-                Station, transfer to the Market-Frankford (BLUE) line West to
-                40th street, then walk 2 blocks south to Walnut, and 2 blocks
-                east to Huntsman Hall. You can also take any trolley (GREEN)
-                line (except the #10) and get off at 36th Street. Walk 1 block
-                south to Walnut and 1.5 blocks west to Huntsman.
+                Metered treet parking is normally available within a few blocks
+                of Huntsman Hall on Saturdays. There is metered parking along
+                Walnut Street and 38th Street. There are also several
+                <a href="https://facilities.upenn.edu/maps/parking" target="_blank">
+                paid parking lots
+                </a> available on campus, including one 
+                <a href="https://facilities.upenn.edu/maps/parking/parking-garage-walnut-38" target="_blank">
+                  at the corner of 38th & Walnut Street</a>,
+                directly across from the venue.
               </p>
             </div>
             <div class="trifold-fold">
               <img alt="" class="trifold-icon" src="images/sandwich.svg" />
               <h3 class="heading-secondary">Sustenance</h3>
               <p class="text-body text-body--small">
-                For anyone riding a train or regional rail to 30th Street
-                Station, transfer to the Market-Frankford (BLUE) line West to
-                40th street, then walk 2 blocks south to Walnut, and 2 blocks
-                east to Huntsman Hall. You can also take any trolley (GREEN)
-                line (except the #10) and get off at 36th Street. Walk 1 block
-                south to Walnut and 1.5 blocks west to Huntsman.
+                It is a BarCamp Philly tradition to have lunch around campus
+                with new friends! There are many places to eat nearby with a
+                large variety of foods. We'll be updating the list below
+                with more options.
               </p>
             </div>
           </div>
@@ -356,7 +357,7 @@
               </h4>
               <p class="schedule-details">
                 Take a walk around University City, find
-                <a class="anchor-inline" href="/">something good to eat</a>
+                <a class="anchor-inline" href="#location">something good to eat</a>
                 (there’s plenty of it out there). Return in time for the
                 afternoon sessions.
               </p>
