--- a/index.html
+++ b/index.html
@@ -237,10 +237,10 @@
                 Metered treet parking is normally available within a few blocks
                 of Huntsman Hall on Saturdays. There is metered parking along
                 Walnut Street and 38th Street. There are also several
-                <a href="https://facilities.upenn.edu/maps/parking" target="_blank">
+                <a href="https://facilities.upenn.edu/maps/parking" class="anchor-inline" target="_blank">
                 paid parking lots
                 </a> available on campus, including one 
-                <a href="https://facilities.upenn.edu/maps/parking/parking-garage-walnut-38" target="_blank">
+                <a href="https://facilities.upenn.edu/maps/parking/parking-garage-walnut-38" class="anchor-inline" target="_blank">
                   at the corner of 38th & Walnut Street</a>,
                 directly across from the venue.
               </p>
@@ -251,8 +251,9 @@
               <p class="text-body text-body--small">
                 It is a BarCamp Philly tradition to have lunch around campus
                 with new friends! There are many places to eat nearby with a
-                large variety of foods. We'll be updating the list below
-                with more options.
+                large variety of foods.
+                <br><br>
+                We'll be updating the list below with more options!
               </p>
             </div>
           </div>
@@ -545,9 +546,9 @@
 
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">Solo Sponsors</h3>
-          <a href="https://arcwebtech.com" target="_blank">Arcweb</a>
-          |
-          <a href="https://chariotsolutions.com" target="_blank">Chariot Solutions</a>
+          <a href="https://arcwebtech.com" class="text-body--medium" target="_blank">Arcweb</a>
+          <br>
+          <a href="https://chariotsolutions.com" class="text-body--medium" target="_blank">Chariot Solutions</a>
         </div>
       </section>
 
