index.html: fix venue punctuation

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <section class="map" id="map">
         <div class="section-contents">
           <div class="card card--map">
-            <p class="card-title">Jon M, Huntsman Hall</p>
+            <p class="card-title">Jon M. Huntsman Hall</p>
             <p>3730 Walnut Street,<br />Philadelphia, PA 19104</p>
             <p>
               <a
