Add National Grid logo.

--- a/index.html
+++ b/index.html
@@ -520,6 +520,13 @@
               alt="Fastmail"
             />
           </a>
+          <a href="https://www.nationalgridus.com/" target="_blank">
+            <img
+              src="images/sponsors/national-grid-100.png"
+              class="responsive"
+              alt="National Grid"
+            />
+          </a>
         </div>
 
         <!-- div class="sponsor-group">
