Add Moxie Labs. Clean up National Grid.

--- a/index.html
+++ b/index.html
@@ -529,9 +529,16 @@
           </a>
         </div>
 
-        <!-- div class="sponsor-group">
+        <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">Giant Sponsors</h3>
-        </div -->
+          <a href="https://moxielabs.co/" target="_blank">
+            <img
+              src="images/sponsors/moxie-labs-100.png"
+              class="responsive"
+              alt="Moxie Labs"
+            />
+          </a>
+        </div>
 
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">Big Sponsors</h3>
