Add Unveiled Security.

--- a/index.html
+++ b/index.html
@@ -556,6 +556,13 @@
               alt="REVSYS"
             />
           </a>
+          <a href="https://unveiledsecurity.com/" target="_blank">
+            <img
+              src="images/sponsors/unveiled-security-100.png"
+              class="responsive"
+              alt="Unveiled Security"
+            />
+          </a>
         </div>
 
         <div class="sponsor-group">
