Update after party.

--- a/index.html
+++ b/index.html
@@ -204,14 +204,7 @@
           <h2 class="heading-primary">Location</h2>
           <p class="text-body text-body--medium">
             BarCamp Philly will be held in Jon M. Huntsman Hall at The Wharton
-            School, University of Pennsylvania. Afterwards we're headed back to
-            <a
-              href="https://www.facebook.com/Blarneystonephiladelphia/"
-              target="_blank"
-              rel="noopener nofollow"
-              >The Blarney Stone</a
-            >
-            to celebrate the day!
+            School of the University of Pennsylvania.
           </p>
           <div class="trifold">
             <div class="trifold-fold">
@@ -260,12 +253,51 @@
         </div>
       </section>
 
-      <section class="nearby section">
-        <img
-          alt="Food proximity radius diagram. One block: Halal Food Truck NW Corner of 38th and Walnut, Mexi-Cali Burrito Truck SW Corner of 38th and Walnut. Two blocks: Sweetgreen 3925 Walnut, Jimmy John's 3925 Walnut, Bobby's Burger Palace 3925 Walnut, Chipotle 3925 Walnut, Hummus Grill 3931 Walnut."
-          class="nearby-proximity"
-          src="images/barcampphilly-2023-lunch-options-2.svg"
-        />
+      <section class="section" id="lunch">
+        <div class="section-contents section-contents--lunch">
+          <h2 class="heading-primary">Lunch</h2>
+          <p class="text-body text-body--medium">
+            There are lots of food options nearby: find a spot to enjoy
+            lunch with new friends!
+          </p>
+          <div class="trifold">
+            <div class="trifold-fold">
+              <h3 class="heading-secondary">One Block</h3>
+              <p class="text-body text-body--small">
+                For anyone riding a train or regional rail to 30th Street
+                Station, transfer to the Market-Frankford (BLUE) line West to
+                40th street, then walk 2 blocks south to Walnut, and 2 blocks
+                east to Huntsman Hall. You can also take any trolley (GREEN)
+                line (except the #10) and get off at 36th Street. Walk 1 block
+                south to Walnut and 1.5 blocks west to Huntsman.
+              </p>
+            </div>
+            <div class="trifold-fold">
+              <h3 class="heading-secondary">Two Blocks</h3>
+              <p class="text-body text-body--small">
+                Metered treet parking is normally available within a few blocks
+                of Huntsman Hall on Saturdays. There is metered parking along
+                Walnut Street and 38th Street. There are also several
+                <a href="https://facilities.upenn.edu/maps/parking" class="anchor-inline" target="_blank">
+                paid parking lots
+                </a> available on campus, including one 
+                <a href="https://facilities.upenn.edu/maps/parking/parking-garage-walnut-38" class="anchor-inline" target="_blank">
+                  at the corner of 38th & Walnut Street</a>,
+                directly across from the venue.
+              </p>
+            </div>
+            <div class="trifold-fold">
+              <h3 class="heading-secondary">Three Blocks</h3>
+              <p class="text-body text-body--small">
+                It is a BarCamp Philly tradition to have lunch around campus
+                with new friends! There are many places to eat nearby with a
+                large variety of foods.
+                <br><br>
+                We'll be updating the list below with more options!
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section class="section section--register" id="register">
@@ -396,20 +428,15 @@
             </li>
             <li class="schedule-item">
               <h4 class="heading-tertiary heading-tertiary--schedule-item">
-                <div class="schedule-window">6:00pm - 8:00pm</div>
-                <div class="schedule-heading">After Party</div>
+                <div class="schedule-window">6:00pm - ?</div>
+                <div class="schedule-heading">Attendee Events</div>
               </h4>
               <p class="schedule-details">
-                Enjoy a drink, have a snack, celebrate your epic session, keep
-                talking to the folks you met. Follow all of your new friends on
-                Twitter. Follow
-                <a
-                  href="https://twitter.com/BarCampPhilly"
-                  target="_blank"
-                  rel="noopener nofollow"
-                  >@BarCampPhilly</a
-                >
-                on Twitter. Stay as late as you want, but get home safely.
+                After a day full of sessions, we'll allow time during final
+                remarks for attendees to present ideas for events. Whether
+                it is grabbing a drink at a local bar, going out to sing
+                karaoke, or taking a walk around campus, the ideas are up to
+                YOU.
               </p>
             </li>
           </ol>
