Update CSS to have three evenly spaced columns.

--- a/index.html
+++ b/index.html
@@ -263,37 +263,37 @@
           <div class="trifold">
             <div class="trifold-fold">
               <h3 class="heading-secondary">One Block</h3>
-              <p class="text-body text-body--small">
-                For anyone riding a train or regional rail to 30th Street
-                Station, transfer to the Market-Frankford (BLUE) line West to
-                40th street, then walk 2 blocks south to Walnut, and 2 blocks
-                east to Huntsman Hall. You can also take any trolley (GREEN)
-                line (except the #10) and get off at 36th Street. Walk 1 block
-                south to Walnut and 1.5 blocks west to Huntsman.
-              </p>
+              <ul>
+                <li class="text-body text-body--small">
+                  Food Trucks, across Walnut St next to Pottruck Gym
+                </li>
+                <li class="text-body text-body--small">
+                  Honeygrow, 3731 Walnut St
+                </li>
+                <li></li>
+                <li></li>
+              </ul>
             </div>
             <div class="trifold-fold">
               <h3 class="heading-secondary">Two Blocks</h3>
               <p class="text-body text-body--small">
-                Metered treet parking is normally available within a few blocks
-                of Huntsman Hall on Saturdays. There is metered parking along
-                Walnut Street and 38th Street. There are also several
-                <a href="https://facilities.upenn.edu/maps/parking" class="anchor-inline" target="_blank">
-                paid parking lots
-                </a> available on campus, including one 
-                <a href="https://facilities.upenn.edu/maps/parking/parking-garage-walnut-38" class="anchor-inline" target="_blank">
-                  at the corner of 38th & Walnut Street</a>,
-                directly across from the venue.
+                <ul>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
               </p>
             </div>
             <div class="trifold-fold">
               <h3 class="heading-secondary">Three Blocks</h3>
               <p class="text-body text-body--small">
-                It is a BarCamp Philly tradition to have lunch around campus
-                with new friends! There are many places to eat nearby with a
-                large variety of foods.
-                <br><br>
-                We'll be updating the list below with more options!
+                <ul>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
               </p>
             </div>
           </div>
